--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO -->
     <meta name="description" content="اختبر معرفتك بالسيرة النبوية ﷺ من خلال أسئلة تفاعلية ممتعة مع نتائج فورية ونسبة مئوية لدرجتك. مناسب للطلاب ومحبي التعلم الإسلامي.">
-    <meta name="keywords" content="السيرة النبوية, اختبار اسلامي, سيرة النبي, تطبيق تعليمي, اسئلة اسلامية, Quiz Seerah, Islamic Quiz">
+    <meta name="keywords" content="السيرة النبوية, اختبار اسلامي, سيرة النبي, تطبيق تعليمي, اسئلة اسلامية">
     <meta name="author" content="Ibraheem Abdulwasih">
 
     <!-- Open Graph / Social Media -->
